Fix bug with link CSS on iOS.

--- a/app/views/stylesheets/screen.sass
+++ b/app/views/stylesheets/screen.sass
@@ -5,8 +5,8 @@
 !link_highlight = #777777
 
 a
-  -webkit-transition: all 0.2s ease
-  -moz-transition: all 0.3s ease
+  -webkit-transition: background 0.2s ease
+  -moz-transition: background 0.3s ease
   text-decoration: none
   &:hover
     text-decoration: underline
